# better_commit

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  setup.backup.py  setup.cfg
simple_sum/: __init__.py  sum_function.py
tests/: module_test.py
