[metadata]
name = simple sum
author = pejmans21
author_email = pejmans21@mail.com
url = https://github.com/pejmans21/better_commit/
version = 0.0.3
description = sum two integers

[options]
packages = find:

[options.packages.find]
exclude = tests*

[options.entry_points]
console_scripts =
    simsum = simple_sum.sum_function:sum_func
